mit første commit ved brug af git - alle filer op på repositoriet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <div id="result-container">
             <!-- Quiz results will be displayed here -->
         </div>
+        <div id="score-container" class="top-left">
+            Score: <span id="score">0</span> Points: <span id="points">0</span>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
