--- a/index.html
+++ b/index.html
@@ -3,24 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>STEM Quiz</title>
-
+    <link rel="stylesheet" href="Styles/start.css">
+    <title>STEM Quiz - Start</title>
+    <script src="Scripts/start.js"></script>
 </head>
 <body>
-    <div class="quiz-container">
-        <h1>STEM QUIZ</h1>
-        <div id="question-container">
-            <!-- Questions and options will be dynamically added here -->
-        </div>
-        <button id="next-button">Næste Spørgsmål</button>
-        <div id="result-container">
-            <!-- Quiz results will be displayed here -->
-        </div>
-        <div id="score-container" class="top-left">
-            Score: <span id="score">0</span> Points: <span id="points">0</span>
-        </div>
+    <div class="start-container">
+        <h1>Welcome to STEM Quiz</h1>
+        <p>Select a Game Mode:</p>
+        <button id="endless-mode-button">Endless Mode</button>
+        <button id="timed-mode-button">10 Questions in 2 Minutes</button>
     </div>
-    <script src="script.js"></script>
+    
 </body>
 </html>
