--- a/endless.html
+++ b/endless.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/endless.css">
+    <link rel="stylesheet" href="Styles/endless.css">
     <script src="Scripts/endless.js"></script>
     <title>STEM Quiz</title>
 
