tilføjede Menu Knap for at komme tilbage til menuen

--- a/endless.html
+++ b/endless.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-    <div id="score-container" class="top-left">
+    <button id="back-button">Menu</button>
+
+    <div id="score-container">
         Score: <span id="score">0</span> Points: <span id="points">0</span>
     </div>
 
