Ændrede tiden for at pop-oppen forsvinder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="start-container">
         <h1>Welcome to STEM Quiz</h1>
         <p>Select a Game Mode:</p>
-        <button id="endless-mode-button">Endless Mode</button>
+        <button id="endless-mode-button">endeløst</button>
         <button id="timed-mode-button">10 Questions in 2 Minutes</button>
     </div>
     
