--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     <div class="start-container">
         <h1>Welcome to STEM Quiz</h1>
         <p>Select a Game Mode:</p>
-        <button id="endless-mode-button">endeløst</button>
-        <button id="timed-mode-button">10 Questions in 2 Minutes</button>
+        <button id="endless-mode-button">ende løst</button>
+        <button id="enkelte-fag-button">Enkelte fag</button>
     </div>
-    
 </body>
 </html>
