--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="start-container">
-        <h1>Welcome to STEM Quiz</h1>
-        <p>Select a Game Mode:</p>
-        <button id="endless-mode-button">endless</button>
-        <button id="timed-mode-button">10 Questions in 2 Minutes</button>
+        <h1>Velkommen til STEM quiz</h1>
+        <p>Vælg et spil:</p>
+        <button id="endless-mode-button">Endless</button>
+        <button id="timed-mode-button">Spørgsmål på 2 minutter</button>
     </div>
 </body>
 </html>
