--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Velkommen til STEM quiz</h1>
         <p>Vælg et spil:</p>
         <button id="endless-mode-button">Endless</button>
-        <button id="timed-mode-button">Spørgsmål på 2 minutter</button>
+        <button id="timed-mode-button">Spørgsmål på 2 minutterHEJLKSFDKJS</button>
     </div>
 </body>
 </html>
