--- a/menuFag.html
+++ b/menuFag.html
@@ -33,6 +33,21 @@
             Biologi
         </label>
 
+        <label>
+            <input type="checkbox" id="geografi" name="subject" value="geografi">
+            Geografi
+        </label>
+        
+        <label>
+            <input type="checkbox" id="teknologi" name="subject" value="teknologi">
+            Teknologi
+        </label>
+
+        <label>
+            <input type="checkbox" id="engeering" name="subject" value="engeering">
+            Engineering
+        </label>
+
         <button id="back-button">Tilbage til Start</button>
         <button id="start-button">Start Quiz</button>
         
