Virkende fag selector

--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         <button id="endless-mode-button">Endless</button>
         <button id="timed-menu-button">Forskellige Fag</button>
     </div>
+
+    <div id="reset-container">
+        <button onclick="resetProgress()">Nulstil</button>
+    </div>
+
+
+
+
 </body>
 </html>
