mange ændringer min virker

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h1>Velkommen til STEM quiz</h1>
         <p>Vælg et spil:</p>
         <button id="endless-mode-button">Endless</button>
-        <button id="timed-menu-button">Forskellige Fag</button>
+        <button id="menu-fag-button">Forskellige Fag</button>
+        <button id="min-button">Hvor mange spørgsmål kan du svare på, på 1 minut</button>
     </div>
 
     <div id="reset-container">
