virkende highscore system for den enkelte

--- a/minQuiz.html
+++ b/minQuiz.html
@@ -16,6 +16,10 @@
         Score: <span id="score">0</span> Points: <span id="points">0</span>
     </div>
 
+    <div id="highscore-container">
+        highscore: <span id="highscore">0</span> highpoints: <span id="highpoints">0</span>
+    </div>
+
     <div class="timer-container">
         <h1 id="timer"><span id="min"></span>:<span id="sek"></span></h1>
     </div>
